# douyin-live-smartclip

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: app.example.toml  app.toml
configs/hotwords/: default.txt
configs/prompts/: clip_planner.md
docs/: ai_cover_prompt.md  staging_docker_deployment.md  video_post_processing_todo.md
scripts/: lint.sh  migrate.sh  test.sh
src/liveclip/: exceptions.py
src/liveclip/adapters/: __init__.py  gpt_image.py
src/liveclip/api/: __init__.py  app.py  deps.py
src/liveclip/cli/: __init__.py  app.py
src/liveclip/config/: __init__.py  loader.py  settings.py
tests/: conftest.py
tests/e2e/: test_pipeline_offline.py
tests/fixtures/: sample.srt
tests/unit/: test_boundary.py  test_clip_cli.py  test_clip_route_paths.py  test_config.py  test_cover_service.py  test_db_session.py  test_domain_models.py  test_douyin_stream_fetcher.py  test_enums.py  test_exceptions.py  test_export_clips_step.py  test_export_schema.py  test_export_service.py  test_ffmpeg_recording.py  test_ffmpeg_tempfile.py  test_funasr_transcriber.py  test_gpt_image_client.py  test_hard_subtitle_service.py  test_highlight_service.py  test_json_utils.py  test_llm_client.py  test_parts.py  test_plan_clips_step.py  test_preprocess_subtitle_step.py  test_process_utils.py  test_resource_cleanup.py  test_segment.py  test_sentence_merge.py  test_srt_parser.py  test_srt_writer.py  test_state_machine.py  test_step_executor.py  test_storage_local.py  test_storage_paths.py  test_timecode_utils.py  test_timezone_utils.py  test_transcription_service.py  test_value_objects.py  test_worker_config_refresh.py
tests/video/: 01_广告公司养人成本高不敢接单_AI智能体一站式解决.srt  02_水蜜桃改葡萄汁无痕改字演示.srt  03_AI一键生成IP形象_从选择到三视图展示.srt  04_AI智能体七天免费试用领取教程.srt  05_无需提示词_一键生成多种风格效果图.srt  06_AI智能体门头招牌文生图操作演示_无需提示词_一键生成多种风格.srt  07_文化墙平面转3D_20秒出效果图_施工图_广告公司效率翻倍.srt  08_AI智能体景观小品文生图操作演示.srt  09_AI智能体后期收费模式_微付费_金币充值_不过期.srt  segments.json  video.srt
(+109 files in other folders)
